# shans-web

./: .dockerignore  .gitignore  COMMODITIES_INTEGRATION_SUMMARY.md  EXCHANGE_FILTER_ENHANCEMENT.md  Procfile  README.md  RISK_FREE_RATE_IMPLEMENTATION.md  env.example  manage.py  pyproject.toml  pytest.ini  render.yaml  update_exchanges.py
apps/accounts/: apps.py  context_processors.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: dashboard.html  profile.html
apps/activity/: models.py  urls.py  views.py
apps/activity/migrations/: 0001_initial.py
apps/activity/templates/activity/: history.html  saved.html
apps/analytics/: metrics.py  portfolio.py
apps/core/: throttling.py  urls.py  views.py
apps/core/templates/core/: base.html  home.html
apps/core/templatetags/: __init__.py
apps/data/: fmp_client.py  models.py  services.py
apps/data/management/commands/: load_forex_pairs.py  load_prices.py  refresh_currency_converter.py  update_commodities.py  update_exchanges.py
apps/data/migrations/: 0001_initial.py  0002_commodity_commoditiesquote.py  0003_cryptocurrency_cryptocurrencyquote.py  0004_forex_forexquote.py  0005_exchange.py  0006_commodity_trade_month.py  0007_alter_commodity_exchange.py  0008_add_forex_fields.py
apps/markets/: ai_analysis.py  api.py  api_urls.py  assets.py  chart_service.py  comparison_service.py  currency_converter.py  efficient_frontier.py  llm.py  metrics.py  risk_free_rate_service.py  smart_currency_converter.py  urls.py  views.py  views_end.py  views_new.py
apps/markets/templates/markets/: compare.html  debug_compare.html  info.html
apps/markets/templatetags/: __init__.py  markets_extras.py
apps/portfolio/: api.py  api_urls.py  enhanced_service.py  forecast.py  llm.py  models.py  mpt.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py
apps/portfolio/templates/portfolio/: form.html  result.html
examples/: currency_conversion_example.py  risk_free_rate_demo.py
shans-web/: .dockerignore  .env.example  .gitignore  README.md
shans-web/apps/accounts/: context_processors.py  utils.py  views.py
shans-web/apps/activity/: models.py  urls.py  views.py
shans-web/apps/activity/templates/activity/: saved.html
shans-web/apps/data/management/commands/: load_prices.py
shans-web/apps/markets/: api.py  metrics.py  urls.py  views.py
shans-web/apps/portfolio/: forecast.py  llm.py  views.py
shans-web/shans_web/: wsgi.py
shans-web/tests/: test_smoke.py
shans_web/: settings.py  urls.py
shans_web/shans_web_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
templates/: base.html
tests/: debug_comparison.py  test_analytics_metrics.py  test_analytics_portfolio.py  test_api_contracts.py  test_comparison_performance.py  test_smoke.py
